# crates/sdkwork-routes-deploy-app-api/src/paths.rs
@@ -11,9 +11,6 @@ pub const SITE: &str = "/app/v3/api/sites/{siteId}";
 pub const SITE_COMPOSITION: &str = "/app/v3/api/sites/{siteId}/composition";
 pub const SITE_ACTIVATE: &str = "/app/v3/api/sites/{siteId}/activate";
 pub const SITE_PAUSE: &str = "/app/v3/api/sites/{siteId}/pause";
-pub const SITE_DOMAINS: &str = "/app/v3/api/sites/{siteId}/domains";
-pub const SITE_DOMAIN: &str = "/app/v3/api/sites/{siteId}/domains/{domainId}";
-pub const SITE_DOMAIN_VERIFY: &str = "/app/v3/api/sites/{siteId}/domains/{domainId}/verify";
 pub const SITE_DEPLOYMENTS: &str = "/app/v3/api/sites/{siteId}/deployments";
 pub const SITE_DEPLOYMENT: &str = "/app/v3/api/sites/{siteId}/deployments/{deploymentId}";
 pub const SITE_DEPLOYMENT_ROLLBACK: &str =
@@ -22,7 +19,6 @@ pub const SITE_ENV_VARIABLES: &str = "/app/v3/api/sites/{siteId}/env_variables";
 pub const CERTIFICATES: &str = "/app/v3/api/certificates";
 pub const CERTIFICATE: &str = "/app/v3/api/certificates/{certificateId}";
 pub const CERTIFICATE_RENEW: &str = "/app/v3/api/certificates/{certificateId}/renew";
-pub const CERTIFICATES_UPLOAD: &str = "/app/v3/api/certificates/upload";
 pub const UPLOAD_SESSIONS: &str = "/app/v3/api/upload_sessions";
 pub const UPLOAD_SESSION: &str = "/app/v3/api/upload_sessions/{uploadSessionId}";
 pub const UPLOAD_SESSION_COMPLETE: &str = "/app/v3/api/upload_sessions/{uploadSessionId}/complete";
